--- a/requirements.txt
+++ b/requirements.txt
@@ -20,5 +20,5 @@ spotipy
 tgcrypto
 youtube-search
 youtube-search-python
-git+https://github.com/AtulxD/asd1
-git+https://github.com/AtulxD/asd2
+git+https://github.com/yt-dlp/yt-dlp
+speedtest-cli
